[tool.poetry]
name = "pygraph"
version = "0.1.0"
description = "Simple Python Graph Library"
authors = []

[tool.poetry.dependencies]
python = "^3.8"
importlib_metadata = { version = "^6.0", python = "<3.10" }

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
black = "^23.9.1"
pre-commit = "^3.5"
pdoc3 = "0.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
